--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@material-tailwind/react": "^2.1.10",
     "framer-motion": "^11.18.2",
     "jquery": "^3.7.1",
-   "next": "^13.1.6",
+    "lucide-react": "^0.474.0",
+    "next": "^13.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
